# doas-like

./: Cargo.toml  LICENSE  build.rs  setuid.sh  wrapper.h
.github/workflows/: doas.yml
src/: bindings.rs  c.rs  command.rs  config.rs  display.rs  insults.rs  lib.rs  main.rs  pam.rs  pass.rs  timestamp.rs  verify.rs  vidoas.rs
src/bindings/: linux.rs  linux_wrapper.h  macos.rs  macos_wrapper.h  mod.rs
src/sys/: linux.rs  macos.rs  mod.rs
src/tokenizer/: mod.rs  nightly.rs  stable.rs
src/tokenizer/stackless/: mod.rs  parser.rs
src/utils/: array.rs  convert.rs  display.rs  fmt.rs  mod.rs  selfref.rs
tests/: doas.conf  test0.conf  test1.conf
