[package]
name = "doas"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2.183"
# clear password in memory
zeroize = { version = "1.8.2", features = ["std"] }

# apple local authentication (optional)
block2 = { version = "0.6.2", default-features = false, features = ["alloc"], optional = true }
objc2 = { version = "0.6.4", default-features = false, optional = true }
objc2-foundation = { version = "0.3.2", default-features = false, optional = true }
objc2-local-authentication = { version = "0.3.2", default-features = false, features = ["LAContext", "block2"], optional = true }

[profile.release]
strip = true
panic = "abort"

# [build-dependencies]
# bindgen = "0.71.0"

[features]
nightly = []
apple-auth = ["block2", "objc2", "objc2-foundation", "objc2-local-authentication"]

[lints.clippy]
assigning_clones = "warn"
cloned_instead_of_copied = "warn"
explicit_into_iter_loop = "warn"
format_push_string = "warn"
implicit_clone = "warn"
len_without_is_empty = "allow" 
result_unit_err = "allow" 
let_and_return = "allow"
manual_assert = "warn"
manual_range_contains = "allow"
map_unwrap_or = "warn"
mut_mut = "warn"
needless_lifetimes = "allow"
new_without_default = "allow"
option_map_unit_fn = "allow"
ptr_offset_by_literal = "warn"
ref_option = "warn"
semicolon_if_nothing_returned = "warn"
stable_sort_primitive = "warn"
str_to_string = "warn"
unnecessary_semicolon = "warn"
unused_trait_names = "warn"
# some type is different on Linux and macOS, so we always need to cast them.
unnecessary_cast = "allow"
